[package]
name = "day-02"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
csv = "1.3"

[dev-dependencies]
rstest = "0.18.2"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"