[package]
name = "day-07"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.25"
strum_macros = "0.25"

[dev-dependencies]
rstest = "0.18.2"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
